# ida-auto-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
ida_auto_mcp/: __init__.py  _registry.py  mcp_server.py  server.py  session.py  tools.py
